examples/test/testpolicy10977.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10977
  namespace: namespace446
spec:
  podSelector:
    matchLabels:
      key46: value6
      key37: value16
      key11: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value20
          key40: value40
          key3: value49
      podSelector:
        matchLabels:
          key37: value46
